scrollbar issue updated

--- a/src/packages/web/src/assets/css/constants/base/mixins.scss
+++ b/src/packages/web/src/assets/css/constants/base/mixins.scss
@@ -2,11 +2,10 @@
 
 @mixin scrollbars() {
   &::-webkit-scrollbar {
-    width: 15px;
-    height: 15px;
+    width: 8px;
+    height: 8px;
     background-color: #ececec;
   }
-
   &::-webkit-scrollbar-thumb {
     background-color: $BLUE;
   }
